# octaneServGrpc

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  EXPLAINER.md  IMPROVEMENTS.md  PLAN.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  UNIFY.md
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  PLAN.md  REFERENCE.md  TESTING.md  TODO.md  TROUBLESHOOTING.md  UNIFY.md
src/: OctaneServGrpc.rc  SERVKEY.cpp  SERVKEY.h  grpc_server.cpp  grpc_server.h  main.cpp  resource.h  sdk_engine.cpp  sdk_engine.h
src/services/: info_service.h
src/util/: callback_dispatcher.h  handle_registry.cpp  handle_registry.h  logging_interceptor.h  server_log.cpp  server_log.h
tests/fuzz/: CMakeLists.txt  fuzz_client.cpp
tests/fuzz/categories/: buffer_fuzz.cpp  buffer_fuzz.h  concurrent_stress.cpp  concurrent_stress.h  connection_abuse.cpp  connection_abuse.h  enum_fuzz.cpp  enum_fuzz.h  float_fuzz.cpp  float_fuzz.h  handle_fuzz.cpp  handle_fuzz.h  numeric_boundary.cpp  numeric_boundary.h  proto_malform.cpp  proto_malform.h  rapid_fire.cpp  rapid_fire.h  resource_exhaust.cpp  resource_exhaust.h  sequence_fuzz.cpp  sequence_fuzz.h  stale_handle.cpp  stale_handle.h  state_machine.cpp  state_machine.h  stream_abuse.cpp  stream_abuse.h  string_fuzz.cpp  string_fuzz.h  type_confusion.cpp  type_confusion.h
tests/fuzz/util/: connection.cpp  connection.h  fuzz_values.h  test_framework.cpp  test_framework.h
